--- a/beautifulsoup_assignment.ipynb
+++ b/beautifulsoup_assignment.ipynb
@@ -15178,7 +15178,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "findmonitorHP= soup.find_all(\"\")"
+   ]
   }
  ],
  "metadata": {
