--- a/beautifulsoup_assignment.ipynb
+++ b/beautifulsoup_assignment.ipynb
@@ -15175,7 +15175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -15189,7 +15189,7 @@
     }
    ],
    "source": [
-    "findmonitorDELL= soup.find_all(\"span\")\n",
+    "findmonitorDELL= soup.find_all([\"span\",[\"/span\"]])\n",
     "print(findmonitorDELL)"
    ]
   },
