--- a/beautifulsoup_assignment.ipynb
+++ b/beautifulsoup_assignment.ipynb
@@ -26,11 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = requests.get(\"https://www.harveynorman.ie/computing/tablets/?utm_source=homepage&utm_medium=home-page-tile&utm_campaign=black-friday-2022&utm_content=tablets.html\")"
+    "r = requests.get(\"https://www.zomato.com/mumbai.html\")"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -51,11 +51,18 @@
      "text": [
       "<html>\n",
       " <head>\n",
-      "  <meta content=\"noindex,nofollow\" name=\"robots\"/>\n",
-      "  <script src=\"/_Incapsula_Resource?SWJIYLWA=5074a744e2e3d891814e9a2dace20bd4,719d34d31c8e3a6e6fffd425f7e032f3\">\n",
-      "  </script>\n",
+      "  <title>\n",
+      "   Access Denied\n",
+      "  </title>\n",
       " </head>\n",
       " <body>\n",
+      "  <h1>\n",
+      "   Access Denied\n",
+      "  </h1>\n",
+      "  You don't have permission to access \"http://www.zomato.com/mumbai.html\" on this server.\n",
+      "  <p>\n",
+      "   Reference #18.4cb01302.1669404174.129e66dc\n",
+      "  </p>\n",
       " </body>\n",
       "</html>\n",
       "\n"
