--- a/beautifulsoup_assignment.ipynb
+++ b/beautifulsoup_assignment.ipynb
@@ -61,7 +61,7 @@
       "  </h1>\n",
       "  You don't have permission to access \"http://www.zomato.com/mumbai.html\" on this server.\n",
       "  <p>\n",
-      "   Reference #18.15b01302.1670593770.d3c8d58b\n",
+      "   Reference #18.4cb01302.1670603819.1404bf27\n",
       "  </p>\n",
       " </body>\n",
       "</html>\n",
@@ -73,6 +73,14 @@
     "soup = bs(r.content)\n",
     "#printout the html\n",
     "print(soup.prettify())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Because I am getting Permission Error. I manually collected data using jsonviewer. and now I am trying to get insights from the files."
    ]
   }
  ],
@@ -92,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:25:13) [Clang 14.0.6 ]"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
