--- a/beautifulsoup_assignment.ipynb
+++ b/beautifulsoup_assignment.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "from bs4 import BeautifulSoup as bs "
+    "from bs4 import BeautifulSoup as bs bbjbj"
    ]
   },
   {
